--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -1,4 +1,5 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
 {% extends "template.njk" %}
 
@@ -19,6 +20,14 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+    {% if feedbackSubmitted %}
+      {{ govukNotificationBanner({
+        titleText: "Success",
+        text: "Thank you for your feedback. It has been submitted successfully.",
+        type: "success"
+      }) }}
+    {% endif %}
 
     <h1 class="govuk-heading-xl">
       {% if serviceName %} {{ serviceName }} {% endif %}
