--- a/src/main/views/home.njk
+++ b/src/main/views/home.njk
@@ -24,39 +24,12 @@
       {% if serviceName %} {{ serviceName }} {% endif %}
     </h1>
 
-    <p class="govuk-body-m">{{ p1 }}</p>
-
-    <ul class="govuk-list govuk-list--bullet">
-
-      {% for bullet in bullets %}
-      <li>{{ bullet }}</li>
-      {% endfor %}
-
-    </ul>
-
     {{ govukButton({
       text: button,
-      href: "/search-option",
+      href: "/make-auth-call",
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8 continue",
       isStartButton: true
     }) }}
-
-    <h2 class="govuk-heading-m">{{ h2 }}</h2>
-
-    <p class="govuk-inset-text">{{ p1_text}}<a class="govuk-link" href="{{ p1_link }}">{{ p1_link_text }}</a>.</p>
-
-    <p class="govuk-body-m">{{ p2_text }}<a rel="noreferrer noopener" target="_blank" href="https://www.justice-ni.gov.uk/topics/courts-and-tribunals" class="govuk-link">{{ p2_link_text }}</a>{{ p2_text2 }}.</p>
-
-    <p class="govuk-body-m">{{ p_fee_advice }}</p>
-
-    <p class="govuk-body-m">{{ p3_text }}</p>
-    <ul>
-      {% for bullet in bullets2 %}
-      <li class="govuk-body-m">{{ bullet }}</li>
-      {% endfor %}
-    </ul>
-
-    <p class="govuk-body-m">{{ p4_text }}<a rel="noreferrer noopener" target="_blank" href="https://www.scotcourts.gov.uk/the-courts/the-tribunals" class="govuk-link">{{ p4_link_text }}</a>{{ p4_text2 }}.</p>
 
   </div>
 </div>{% endblock %}
